# ChangeLog for net-im/ejabberd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.128 2015/04/12 05:27:09 radhermit Exp $

*ejabberd-15.03 (12 Apr 2015)

  12 Apr 2015; Tim Harder <radhermit@gentoo.org> +ejabberd-15.03.ebuild,
  +files/ejabberd-15.03-ejabberdctl.patch, metadata.xml:
  Version bump (bug #487994).

  20 Mar 2015; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Drop myself as maintainer.

  09 Mar 2015; Manuel Rüger <mrueg@gentoo.org> -ejabberd-2.1.12.ebuild,
  -ejabberd-2.1.13.ebuild:
  Remove old.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> ejabberd-2.1.12.ebuild,
  ejabberd-2.1.13-r1.ebuild, ejabberd-2.1.13.ebuild:
  Remove trailing '.' from DESCRIPTION.

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ejabberd-2.1.13-r1.ebuild:
  Stable for ppc, wrt bug #486292

  04 Dec 2013; Sergey Popov <pinkbyte@gentoo.org> -ejabberd-2.1.11.ebuild:
  Security cleanup, bug #488636

  01 Nov 2013; Agostino Sarubbo <ago@gentoo.org> ejabberd-2.1.13-r1.ebuild:
  Stable for x86, wrt bug #486292

  19 Oct 2013; Pacho Ramos <pacho@gentoo.org> ejabberd-2.1.13-r1.ebuild:
  amd64 stable, bug #486292

*ejabberd-2.1.13-r1 (08 Sep 2013)

  08 Sep 2013; Pacho Ramos <pacho@gentoo.org> +ejabberd-2.1.13-r1.ebuild,
  +files/ejabberd.service, +files/ejabberd.tmpfiles.conf:
  Add unit file (#482444 by Andrius Štikonas)

*ejabberd-2.1.13 (10 Jul 2013)

  10 Jul 2013; Tim Harder <radhermit@gentoo.org> +ejabberd-2.1.13.ebuild,
  +files/ejabberd.logrotate:
  Version bump, add logrotate file (bug #473122 by cyberbat).

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> ejabberd-2.1.12.ebuild:
  Stable for x86, wrt bug #468728

  12 May 2013; Agostino Sarubbo <ago@gentoo.org> ejabberd-2.1.12.ebuild:
  Stable for ppc, wrt bug #468728

  09 May 2013; Chema Alonso <nimiux@gentoo.org> ejabberd-2.1.12.ebuild:
  Stable for amd64 wrt bug #468728

*ejabberd-2.1.12 (05 Apr 2013)
